# pylitehtml

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_zh.md  pyproject.toml  pyrightconfig.json  vcpkg.json
.github/actions/setup-vcpkg-win/: action.yml
.github/workflows/: test.yml  wheels.yml
bench/: bench_vs_playwright.py
docs/superpowers/plans/: 2026-03-14-pylitehtml.md
docs/superpowers/specs/: 2026-03-14-pylitehtml-design.md
examples/: README.md  markdown.md  markdown_full_converter.py  render_markdown_doc.py  showcase_css.py  showcase_html.py  showcase_jinja2.py  showcase_markdown.py
fonts/: fonts.conf
scripts/: download_fonts.sh
src/cpp/: base64.h  binding.cpp  encode.cpp  encode.h  font_manager.cpp  font_manager.h  http_util.cpp  http_util.h  image_cache.cpp  image_cache.h  py_container.cpp  py_container.h
src/python/pylitehtml/: __init__.py  __init__.pyi  _core.pyi  _html2png.py  _jinja.py  fonts  markdown.py
tests/: _helpers.py  conftest.py  test_async.py  test_basic.py  test_config.py  test_css.py  test_fixes.py  test_fonts.py  test_html2png.py  test_images.py  test_jinja2.py  test_markdown.py  test_new_features.py  test_render.py  test_render_file.py  test_thread_safety.py  test_visual.py
tests/assets/templates/: plain.html  style.css  template.html
